# GICS_industry

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  api_server.py  batch_manager.py  db.py  db_backup.sql  export_for_throatscan.py  gics_api_helpers.py  gics_seed.json  mcp_client.py  mcp_server.py  pyproject.toml  render.yaml  requirements.txt  seed_sp500.py
api/: index.py
frontend/: index.html  package-lock.json
frontend/src/: App.vue  style.css
workflows/: __init__.py  base.py  consumer.py  router.py  semiconductor.py  software.py
