[project]
name = "industry-ai-agent"
version = "0.1.0"
description = "GICS industry classification sync MCP server and client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "beautifulsoup4>=4.15.0",
]

[tool.uv]
package = false
